--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,197 @@
 @font-face {
     font-family: 'mafakanevregular';
-    src: url('fonts/webfontkit-20211211-141531/mafakanev.woff2') format('woff2'),
-         url('fonts/webfontkit-20211211-141531/mafakanev.woff') format('woff');
+    src: url('../fonts/webfontkit-20211211-141531/mafakanev.woff2') format('woff2'),
+         url('../fonts/webfontkit-20211211-141531/mafakanev.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  width: 100%;
+  height: 100vh;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.img-div {
+  display: block;
+  width: 100%;
+  height: auto;
+  position: relative;
+  top: 80vh;
+}
+
+svg {
+  width: 70%;
+  display: block;
+  margin: auto;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: auto;
+  z-index: -25;
+}
+
+
+#logo > path:nth-child(2) {
+  stroke-dasharray: 1412.4;
+  stroke-dashoffset: 1412.4;
+  animation: line-anim 2s ease forwards;
+}
+
+#logo > path:nth-child(3) {
+  stroke-dasharray: 385.2;
+  stroke-dashoffset: 385.2;
+  animation: line-anim 2s ease forwards 0.3s;
+}
+
+#logo > path:nth-child(4) {
+  stroke-dasharray: 521.9;
+  stroke-dashoffset: 521.9;
+  animation: line-anim 2s ease forwards 0.6s;
+}
+
+#logo > path:nth-child(5) {
+  stroke-dasharray: 296.1;
+  stroke-dashoffset: 296.1;
+  animation: line-anim 2s ease forwards 0.9s;
+}
+
+#logo > path:nth-child(6) {
+  stroke-dasharray: 521.9;
+  stroke-dashoffset: 521.9;
+  animation: line-anim 2s ease forwards 1.2s;
+}
+
+#logo > path:nth-child(7) {
+  stroke-dasharray: 1618.3;
+  stroke-dashoffset: 1618.3;
+  animation: line-anim 2s ease forwards 1.5s;
+}
+
+#logo > path:nth-child(8) {
+  stroke-dasharray: 46.0;
+  stroke-dashoffset: 46.0;
+  animation: line-anim 2s ease forwards 1.8s;
+}
+
+#logo > path:nth-child(9) {
+  stroke-dasharray: 1625.4;
+  stroke-dashoffset: 1625.4;
+  animation: line-anim 2s ease forwards 2.1s;
+}
+
+#logo > path:nth-child(10) {
+  stroke-dasharray: 521.9;
+  stroke-dashoffset: 521.9;
+  animation: line-anim 2s ease forwards 2.4s;
+}
+
+#logo > path:nth-child(11) {
+  stroke-dasharray: 830.8;
+  stroke-dashoffset: 830.8;
+  animation: line-anim 2s ease forwards 2.7s;
+}
+
+#logo > path:nth-child(12) {
+  stroke-dasharray: 830.8;
+  stroke-dashoffset: 830.8;
+  animation: line-anim 2s ease forwards 3.0s;
+}
+
+
+#logo > path:nth-child(13) {
+  stroke-dasharray: 1412.4;
+  stroke-dashoffset: 1412.4;
+  animation: line-anim 2s ease forwards 3.3s;
+}
+
+#logo > path:nth-child(14) {
+  stroke-dasharray: 385.2;
+  stroke-dashoffset: 385.2;
+  animation: line-anim 2s ease forwards 3.6s;
+}
+
+#logo > path:nth-child(15) {
+  stroke-dasharray: 521.9;
+  stroke-dashoffset: 521.9;
+  animation: line-anim 2s ease forwards 3.9s;
+}
+
+
+#logo > path:nth-child(16) {
+  stroke-dasharray: 296.1;
+  stroke-dashoffset: 296.1;
+  animation: line-anim 2s ease forwards 4.2s;
+}
+
+
+#logo > path:nth-child(17) {
+  stroke-dasharray: 521.9;
+  stroke-dashoffset: 521.9;
+  animation: line-anim 2s ease forwards 4.5s;
+}
+
+#logo > path:nth-child(18) {
+  stroke-dasharray: 1618.3;
+  stroke-dashoffset: 1618.3;
+  animation: line-anim 2s ease forwards 4.8s;
+}
+
+#logo > path:nth-child(19) {
+  stroke-dasharray: 46.0;
+  stroke-dashoffset: 46.0;
+  animation: line-anim 2s ease forwards 5.1s;
+}
+
+#logo > path:nth-child(20) {
+  stroke-dasharray: 1625.4;
+  stroke-dashoffset: 1625.4;
+  animation: line-anim 2s ease forwards 5.4s;
+}
+
+#logo > path:nth-child(21) {
+  stroke-dasharray: 521.9;
+  stroke-dashoffset: 521.9;
+  animation: line-anim 2s ease forwards 5.7s;
+}
+
+#logo > path:nth-child(22) {
+  stroke-dasharray: 830.8;
+  stroke-dashoffset: 830.8;
+  animation: line-anim 2s ease forwards 6.0s;
+}
+
+#logo > path:nth-child(23) {
+  stroke-dasharray: 830.8;
+  stroke-dashoffset: 830.8;
+  animation: line-anim 2s ease forwards 6.3s;
+}
+
+@keyframes line-anim {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+
+/* colors:
+bright pink: #F22E52
+pink: #F26D85
+dark-dark blue: #080726
+dark blue: #0E1259
+blue: #171C73 */
+
 
 img {
   max-width: 50%;
@@ -35,9 +221,11 @@ li {
 
 .title {
   color: white;
-  margin: 2em auto 4em auto;
-  width: 20%;
+  margin: 1em auto 1em auto;
+  width: 32%;
   font-family: 'mafakanevregular', sans-serif;
+  font-size: 5em;
+  display: none;
 }
 
 .img-caption {
