--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ body {
   height: 100vh;
   background-color: black;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: wrap;
 }
 
@@ -26,7 +26,6 @@ body {
   display: block;
   width: 100%;
   height: auto;
-  position: fixed;
   min-height: 100vh;
   min-width: 100%;
   top: 0;
@@ -37,7 +36,6 @@ img {
   max-width: 50%;
   margin-left: 50%;
   height: auto;
-  position: static;
   margin-top: calc(100vh/3.33);
 }
 
