--- a/css/styles.css
+++ b/css/styles.css
@@ -407,6 +407,14 @@ svg {
 
 }
 
+.spin {
+  animation: spin 2s ease forwards;
+}
+
+.secondspin {
+  animation: spin 2s ease forwards;
+}
+
 @keyframes line-anim {
   to {
     stroke-dashoffset: 0;
@@ -448,6 +456,28 @@ svg {
   to {
     visibility: hidden;
     opacity: 0;
+  }
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform:rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(1260deg);
+    transform:rotate(1260deg);
+  }
+}
+
+@keyframes secondspin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform:rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(1260deg);
+    transform:rotate(1260deg);
   }
 }
 
