makes the bullets bigger and adjusts them to the correct spot on the timeline

--- a/css/styles.css
+++ b/css/styles.css
@@ -191,14 +191,26 @@ h3 {
   Font-Size: 1.5em;
 }
 
-h3::before {
+.card:nth-child(even) > h3::before {
   content: '';
-    position: absolute;
-    width: 10px;
-    height: 10px;
-    background: transparent;
-    border-radius: 999px;
-    border: 3px solid #9F8047;
+  position: absolute;
+  width: 1em;
+  height: 1em;
+  background: transparent;
+  border-radius: 999px;
+  border: 3px solid #9F8047;
+  transform: translate(-67px, -2px);
+}
+
+.card:nth-child(odd) > h3::before {
+  content: '';
+  position: absolute;
+  width: 1em;
+  height: 1em;
+  background: transparent;
+  border-radius: 999px;
+  border: 3px solid #9F8047;
+  transform: translate(67px, -2px);
 }
 
 h3:hover {
