--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ Font-Size: 16px; */
   padding: 0;
 }
 
-.background-gradient::after {
+.background-gradient::before {
   content: '';
   width: 32%;
   background-image: linear-gradient(144deg, rgba(159,128,71,1) 7%, rgba(235,189,106,1) 21%, rgba(255,255,255,1) 75%, rgba(235,189,106,1) 92%, rgba(159,128,71,1) 100%);
@@ -172,6 +172,41 @@ figcaption {
   width: 80%;
 }
 
+.figure-alec {
+  display: flex;
+  flex-direction: row-reverse;
+  transform: translateX(33%);
+}
+
+.flush-right {
+  width: 58%;
+  padding: 2em 0 2em 0;
+  margin-left: auto;
+  text-align: right;
+}
+
+#event_1 {
+  height: 53.4vh;
+  top: -26vh;
+}
+
+.img-alec {
+  max-width: 100%;
+  margin-left: 0;
+  height: auto;
+  margin-top: calc(100vh/19);
+}
+
+.fig-caption-11 {
+  font-size: .55em;
+  Font-Family: 'Julius Sans One', Sans-Serif;
+  padding: 3em;
+  margin-left: 0;
+  width: 26%;
+  margin-top: 1em;
+  overflow-wrap: break-word;
+}
+
 .fig-caption-31 {
   font-size: .55em;
   Font-Family: 'Julius Sans One', Sans-Serif;
@@ -181,7 +216,7 @@ figcaption {
   margin-bottom: 2em;
 }
 
-.fig-cation-19 {
+.fig-caption-20 {
   width: 50%;
   margin: 0 0 0 38%;
 }
@@ -213,6 +248,28 @@ img {
   margin-left: 44%;
   height: auto;
   margin-top: calc(100vh/19);
+}
+
+.img-baby-katherine {
+  object-fit: cover;
+  width: 25em;
+  height: 25em;
+  object-position: 50% 50%;
+  filter: contrast(1.2);
+  transform: translateX(50%);
+}
+
+.img-school-katherine {
+  object-fit: cover;
+  width: 25em;
+  height: 31em;
+  object-position: 50% 50%;
+  transform: translateX(50%);
+}
+
+.img-kat-chair {
+  max-width: 100%;
+  transform: translateX(-15%);
 }
 
 .img-div {
@@ -460,8 +517,6 @@ main > div.card:nth-child(1) {
     transform: translate(-24vw, -69vh);
 }
 
-
-
 p {
   Font-Family: 'Monda', Sans-Serif;
   Font-Size: .75em;
@@ -470,9 +525,9 @@ p {
 
 .title {
   color: white;
-  margin: 1em 0 1em auto;
-  width: 32%;
-  font-size: 5em;
+  margin: 3% auto 0% auto;
+  width: 67%;
+  font-size: 10em;
   Font-Family: 'Julius Sans One', Sans-Serif;
 }
 
